<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_metronome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="schalago.beepbox.MetronomeActivity">

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_bpmText"
        android:id="@+id/bpmText" />

    <Button
        android:text="@string/secretButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secretButton"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp" />

    <TextView
        android:text="@string/default_italianTempoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/italianTempoText"
        android:textStyle="normal|italic"
        android:layout_below="@+id/bpmText"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bpmSeekBar"
        android:max="290"
        android:progress="80"
        android:clickable="false"
        android:layout_below="@+id/italianTempoText"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minusButton"
        android:layout_below="@+id/bpmSeekBar"
        android:layout_toLeftOf="@id/center"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plusButton"
        android:layout_below="@+id/bpmSeekBar"
        android:layout_toRightOf="@id/center"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/tapTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tapTempoButton"
        android:layout_below="@+id/minusButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeSignatureSpinner"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/center"
        android:layout_above="@+id/bpmSeekBar" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:background="@color/colorPrimary"
        android:textOff="@string/toggleOn"
        android:textOn="@string/toggleOff"
        android:textColor="@android:color/white"
        android:layout_below="@+id/tapTempoButton"
        android:layout_alignParentStart="true" />

</RelativeLayout>
